--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -9,10 +9,17 @@ inputs:
     description: 'Path to a folder in the repository containing a tests module to be built'
     required: false
     default: 'tests/jahia-module/'   
+  node_version:
+    description: 'Version of node to install on the host'
+    required: false
+    default: 'lts/*'
 
 runs:
   using: 'composite'
   steps:
+    - uses: actions/setup-node@v3
+      with:
+        node-version: ${{ inputs.node_version }}
 
     - name: Install jq
       shell: bash
