--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -29,7 +29,16 @@ runs:
       shell: bash
       run: |
         echo "MODULE_NAME=$(jq '.name' package.json | cut -d\" -f2 )" >> $GITHUB_ENV
-        echo "MODULE_VERSION=$(jq '.version' package.json | cut -d\" -f2 )" >> $GITHUB_ENV
+
+        MODULE_VERSION=$(jq '.version' package.json | cut -d\" -f2 )
+
+        if [ ! $MODULE_VERSION -eq *-SNAPSHOT ]
+        then
+          echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
+        else
+          echo "MODULE_OLD_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
+          echo "MODULE_VERSION=${{ env.MODULE_OLD_VERSION }}-SNAPSHOT" >> $GITHUB_ENV
+        fi
 
     - name: Prepare the module
       shell: bash
@@ -42,6 +51,12 @@ runs:
     - name: Package the module
       shell: bash
       run: yarn pack
+
+    - name: Rename build file if necessary
+      if [ -ne ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]
+      then
+      mv ./${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
+      fi
 
     - name: Archive build artifacts
       if: always()
