--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -54,7 +54,7 @@ runs:
 
     - name: Rename build file if necessary
       shell: bash
-      run: |Ò
+      run: |
       if [ -ne ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]; then
       mv ./${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
       fi
