--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -32,7 +32,7 @@ runs:
 
         MODULE_VERSION=$(jq '.version' package.json | cut -d\" -f2 )
 
-        if [ ! $MODULE_VERSION -eq *-SNAPSHOT ]
+        if [ $MODULE_VERSION -eq *-SNAPSHOT ]
         then
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         else
@@ -56,7 +56,7 @@ runs:
       shell: bash
       run: |
         if [ -ne ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]; then
-        mv ./${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
+          mv ./${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
         fi
 
     - name: Archive build artifacts
