--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -32,7 +32,7 @@ runs:
 
         MODULE_VERSION=$(jq '.version' package.json | cut -d\" -f2 )
 
-        if [ "$MODULE_VERSION" -eq "*-SNAPSHOT" ]; then
+        if [[ $MODULE_VERSION == *-SNAPSHOT ]]; then
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         else
           echo "MODULE_OLD_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
