--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -36,7 +36,8 @@ runs:
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         else
           echo "MODULE_OLD_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
-          echo "MODULE_VERSION=${{ env.MODULE_OLD_VERSION }}-SNAPSHOT" >> $GITHUB_ENV
+          MODULE_VERSION=${{ env.MODULE_OLD_VERSION }}-SNAPSHOT
+          echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         fi
 
     - name: Prepare the module
