--- a/release-npm/action.yml
+++ b/release-npm/action.yml
@@ -101,7 +101,7 @@ runs:
       run: |
         TAG_VERSION=$(echo ${{ inputs.release_version }})
         FINAL_RELEASE_VERSION=$(echo ${{ inputs.release_version }} | tr '_' '.' | cut -d'-' -f 1)
-        echo "FINAL_RELEASE_VERSION=$FINAL_RELEASE_VERSION" >> $GITHUB_ENV
+        echo "FINAL_RELEASE_VERSION=$(echo $FINAL_RELEASE_VERSION)" >> $GITHUB_ENV
         MAJOR_VERSION=`echo $FINAL_RELEASE_VERSION | cut -d. -f1`
         MINOR_VERSION=`echo $FINAL_RELEASE_VERSION | cut -d. -f2`
         REVISION=`echo $FINAL_RELEASE_VERSION | cut -d. -f3`
