TECH-1019: Rename sbom-handling to sbom-processing

--- a/sbom-processing/action.yml
+++ b/sbom-processing/action.yml
@@ -1,4 +1,4 @@
-name: SBOM Handling
+name: SBOM processing
 description: Create software bill of materials and pass it to OWASP Dependency Track
 
 inputs:
