--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -5,10 +5,10 @@ inputs:
   github_artifact_retention:
     description: 'Time during which artifact are kept in Github infrastructure'
     default: '2'
-  tests_module_path:
-    description: 'Path to a folder in the repository containing a tests module to be built'
+  module_path:
+    description: 'Path to the module folder (if not ./ precise path from the github_workspace)'
     required: false
-    default: 'tests/jahia-module/'   
+    default: ./
   node_version:
     description: 'Version of node to install on the host'
     required: false
@@ -21,17 +21,13 @@ runs:
       with:
         node-version: ${{ inputs.node_version }}
 
-    - name: Install jq
-      shell: bash
-      run: sudo apt-get install jq
-
     - name: Get package.json infos
       shell: bash
       run: |
+        # Get informations from package.json to replace the ones that are in pom.xml in classic modules
+        cd ${{ inputs.module_path }}
         echo "MODULE_NAME=$(jq '.name' package.json | cut -d\" -f2 )" >> $GITHUB_ENV
-
         MODULE_VERSION=$(jq '.version' package.json | cut -d\" -f2 )
-
         if [[ $MODULE_VERSION == *-SNAPSHOT ]]; then
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         else
@@ -43,21 +39,27 @@ runs:
 
     - name: Prepare the module
       shell: bash
-      run: yarn
+      run: |
+        cd ${{ inputs.module_path }}
+        yarn
 
     - name: Build the module
       shell: bash
-      run: yarn build
+      run: |
+        cd ${{ inputs.module_path }}
+        yarn build
 
     - name: Package the module
       shell: bash
-      run: yarn pack
+      run: |
+        cd ${{ inputs.module_path }}
+        yarn pack
 
     - name: Rename build file if necessary
       shell: bash
       run: |
-        if [ ! -e ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]; then
-          mv ./${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
+        if [ ! -e ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]; then
+          mv ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
         fi
 
     - name: Archive build artifacts
@@ -66,7 +68,7 @@ runs:
       with:
         name: build-artifacts
         path: |
-          ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
+          ${{inputs.module_path}}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
         retention-days: ${{ inputs.github_artifact_retention }}
 
     - name: Keep session opened if /tmp/debug file is present
