--- a/publish-npm/action.yml
+++ b/publish-npm/action.yml
@@ -11,13 +11,14 @@ inputs:
   nexus_password:
     description: 'Nexus password'
     required: true
-  module_path:
-    description: 'Path to module'
-    default: './'
   node_version:
     description: 'Version of node to install on the host'
     required: false
     default: 'lts/*'
+  module_path:
+    description: 'Path to the module folder (if not ./ precise path from the github_workspace)'
+    required: false
+    default: ./
 
 runs:
   using: 'composite'
@@ -29,6 +30,8 @@ runs:
     - name: Set environment variables from parameters
       shell: bash
       run: |
+        # Get informations from package.json to replace the ones that are in pom.xml in classic modules
+        cd {{ inputs.module_path }}
         echo "NEXUS_USERNAME=${{ inputs.nexus_username }}" >> $GITHUB_ENV
         echo "NEXUS_PASSWORD=${{ inputs.nexus_password }}" >> $GITHUB_ENV
         echo "MODULE_NAME=$(jq '.name' package.json | cut -d\" -f2)" >> $GITHUB_ENV
@@ -36,6 +39,8 @@ runs:
         echo "REPOSITORY_ID=$(jq '.jahia.maven.distributionManagement.snapshotRepository.id' package.json | cut -d\" -f2)" >> $GITHUB_ENV
         echo "REPOSITORY_URL=$(jq '.jahia.maven.distributionManagement.snapshotRepository.url' package.json | cut -d\" -f2)" >> $GITHUB_ENV
         echo "GROUP_ID=$(jq '.jahia.maven.groupId' package.json | cut -d\" -f2)" >> $GITHUB_ENV
+
+        # Add -SNAPSHOT to the version if it isn't present
 
         if [[ $MODULE_VERSION == *-SNAPSHOT ]]; then
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
@@ -46,35 +51,34 @@ runs:
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         fi
 
-    # This step save the maven cache between runs
-    # More details can be found here: https://docs.github.com/en/actions/advanced-guides/caching-dependencies-to-speed-up-workflows
-    - name: Cache local Maven repository
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
     - name: Prepare the module
       shell: bash
-      run: yarn
+      run: |
+        cd ${{ inputs.module_path }}
+        yarn
 
     - name: Build the module
       shell: bash
-      run: yarn build
+      run: |
+        cd ${{ inputs.module_path}}
+        yarn build
 
     - name: Package the module
       shell: bash
-      run: yarn pack
+      run: |
+        cd ${{ inputs.module_path }}
+        yarn pack
 
     - name: Rename build file if necessary
       shell: bash
       run: |
-        if [ ! -e ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]; then
-          mv ./${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ./${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
+        # Add -SNAPSHOT to the filename only if necessary
+        if [ ! -e ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]; then
+          mv ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
         fi
 
     - name: Publish to maven
       shell: bash
-      run: mvn -s ${{ inputs.mvn_settings_filepath }} deploy:deploy-file -Dfile=${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz -DgroupId=${{ env.GROUP_ID }} -DartifactId=${{ env.MODULE_NAME }} -Dversion=${{ env.MODULE_VERSION }} -Dpackaging=tgz -Durl=${{ env.REPOSITORY_URL }} -DrepositoryId=${{ env.REPOSITORY_ID }}
+      run: |
+      # Run mvn deploy with parameters got from the package.json
+      mvn -s ${{ inputs.mvn_settings_filepath }} deploy:deploy-file -Dfile=${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz -DgroupId=${{ env.GROUP_ID }} -DartifactId=${{ env.MODULE_NAME }} -Dversion=${{ env.MODULE_VERSION }} -Dpackaging=tgz -Durl=${{ env.REPOSITORY_URL }} -DrepositoryId=${{ env.REPOSITORY_ID }}
