--- a/release-npm/action.yml
+++ b/release-npm/action.yml
@@ -47,6 +47,10 @@ inputs:
     description: 'Version of node to install on the host'
     required: false
     default: 'lts/*'
+  module_path:
+    description: 'Path to the module folder (if not ./ precise path from the github_workspace)'
+    required: false
+    default: ./
 
 runs:
   using: 'composite'
@@ -57,6 +61,8 @@ runs:
     - name: Set environment variables from parameters
       shell: bash
       run: |
+        # Get informations from package.json to replace the ones that are in pom.xml in classic modules
+        cd ${{ inputs.module_path }}
         echo "NEXUS_USERNAME=${{ inputs.nexus_username }}" >> $GITHUB_ENV
         echo "NEXUS_PASSWORD=${{ inputs.nexus_password }}" >> $GITHUB_ENV
         echo "NEXUS_RELEASE_USERNAME=${{ inputs.nexus_username }}" >> $GITHUB_ENV
@@ -70,12 +76,14 @@ runs:
     - name: Getting latest changes from the remote branch
       shell: bash
       run: |
+        cd ${{ inputs.module_path }}
         git fetch --all
         git pull origin ${{ inputs.primary_release_branch }} --quiet
 
     - name: Delete github tag ${{ inputs.release_version }}
       shell: bash
       run: |
+        cd ${{ inputs.module_path }}
         git config user.email ${{ inputs.git_user_email }}
         git config user.name ${{ inputs.git_user_name }}
         git tag --delete ${{ inputs.release_version }}
@@ -84,12 +92,14 @@ runs:
     - name: Remove any previous changes, this is required by mvn release prepare
       shell: bash
       run: |
+        cd ${{ inputs.module_path }}
         git reset --hard
         git checkout ${{ inputs.primary_release_branch }}
 
     - name: Added some debug details
       shell: bash
       run: |
+        cd ${{ inputs.module_path }}
         git branch
         echo "---"
         git status
@@ -99,6 +109,8 @@ runs:
     - name: Release prepare version for ${{ inputs.release_version }}
       shell: bash
       run: |
+        # Define next development version
+        cd ${{ inputs.module_path }}
         TAG_VERSION=$(echo ${{ inputs.release_version }})
         FINAL_RELEASE_VERSION=$(echo ${{ inputs.release_version }} | tr '_' '.' | cut -d'-' -f 1)
         echo "FINAL_RELEASE_VERSION=$FINAL_RELEASE_VERSION" >> $GITHUB_ENV
@@ -117,6 +129,8 @@ runs:
     - name: Update package.json
       shell: bash
       run: |
+        # Update package.json to match version precised in release tag
+        cd ${{ inputs.module_path }}
         jq '.version |= "${{ env.FINAL_RELEASE_VERSION }}"' package.json > txt.json && jq '.' txt.json > package.json && rm txt.json
 
         if [ ! ${{ env.FINAL_RELEASE_VERSION }} -eq ${{ env.MODULE_VERSION }} ]
@@ -132,18 +146,25 @@ runs:
 
     - name: Prepare the module
       shell: bash
-      run: yarn
+      run: |
+        cd ${{ inputs.module_path }}
+        yarn
     - name: Build the module
       shell: bash
-      run: yarn build
+      run: |
+        cd ${{ inputs.module_path }}
+        yarn build
     - name: Package the module
       shell: bash
-      run: yarn pack
+      run: |
+        cd ${{ inputs.module_path }}
+        yarn pack
 
     - name: Update github release for id ${{ inputs.release_id }}
       shell: bash
       run: |
         echo "Update github release for id ${{ inputs.release_id }}"
+        cd ${{ inputs.module_path }}
         curl -X PATCH \
         -H "Accept:application/vnd.github.v3+json" \
         -d "{\"tag_name\":\"${{ inputs.release_version }}\", \"prerelease\": false, \"draft\": false}" -u \
@@ -162,7 +183,7 @@ runs:
       shell: bash
       run: |
         mkdir /tmp/artifacts/
-        cd ~
+        cd ${{ inputs.module_path }}
         find . -name "*.tgz" -type f  -maxdepth 3 -mindepth 3 -exec cp {} /tmp/artifacts/ \;
 
     - name: Release Artifacts
@@ -177,6 +198,8 @@ runs:
     - name: set next development version into package.json
       shell: bash
       run: |
+        # Update package.json to match next development version
+        cd ${{ inputs.module_path }}
         jq '.version |= "${{ env.NEXT_DEVELOPMENT_VERSION }}"' package.json > txt.json && jq '.' txt.json > package.json && rm txt.json
         git config user.name ${{ inputs.github_user_name }}
         git config user.email ${{ inputs.github_user_email }}
