--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: 'Version of node to install on the host'
     required: false
     default: 'lts/*'
+  archive_artifacts:
+    description: 'Should we archive built artifacts ?'
+    default: 'true'
+    required: false
 
 runs:
   using: 'composite'
@@ -55,18 +59,21 @@ runs:
         cd ${{ inputs.module_path }}
         yarn pack
 
-    - name: Rename build file if necessary
+    - name: Rename build file if necessary and move to /target
       shell: bash
       run: |
+        cd ${{ inputs.module_path }}
         if [ ! -e ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]; then
-          mv ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
+          mv ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz 
         fi
+        mkdir target
+        mv ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz target/${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
 
     - name: Archive build artifacts
-      if: always()
+      if: ${{ inputs.archive_artifacts == 'true' }}
       uses: actions/upload-artifact@v3
       with:
         name: build-artifacts
         path: |
-          ${{inputs.module_path}}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
+          ${{ inputs.module_path }}**/target/*.tgz
         retention-days: ${{ inputs.github_artifact_retention }}
